// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommonCard > Should render correctly > if is null content passed 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-1enej14 css-var-root"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <h2
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-1enej14 css-var-root"
            style="font-size: 16px; margin-bottom: 0px; display: flex; align-items: center; justify-content: space-between;"
          >
            <span>
              <i>
                Icon
              </i>
               
              Test
            </span>
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="css-dev-only-do-not-override-1enej14 css-var-root ant-empty ant-empty-normal"
      >
        <div
          class="ant-empty-image"
        >
          <svg
            height="41"
            viewBox="0 0 64 41"
            width="64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              No data
            </title>
            <g
              fill="none"
              fill-rule="evenodd"
              transform="translate(0 1)"
            >
              <ellipse
                cx="32"
                cy="33"
                fill="#f5f5f5"
                rx="32"
                ry="7"
              />
              <g
                fill-rule="nonzero"
                stroke="#d9d9d9"
              >
                <path
                  d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                />
                <path
                  d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                  fill="#fafafa"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="ant-empty-description"
        >
          No data
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommonCard > Should render correctly > if just basic props is present 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-1enej14 css-var-root"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <h2
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-1enej14 css-var-root"
            style="font-size: 16px; margin-bottom: 0px; display: flex; align-items: center; justify-content: space-between;"
          >
            <span>
              <i>
                Icon
              </i>
               
              Test
            </span>
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card body
      </p>
    </div>
  </div>
</div>
`;

exports[`CommonCard Should render correctly if is null content passed 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-1enej14 css-var-root"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <h2
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-1enej14 css-var-root"
            style="font-size: 16px; margin-bottom: 0px; display: flex; align-items: center; justify-content: space-between;"
          >
            <span>
              <i>
                Icon
              </i>
               
              Test
            </span>
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="css-dev-only-do-not-override-1enej14 css-var-root ant-empty ant-empty-normal"
      >
        <div
          class="ant-empty-image"
        >
          <svg
            height="41"
            viewBox="0 0 64 41"
            width="64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              No data
            </title>
            <g
              fill="none"
              fill-rule="evenodd"
              transform="translate(0 1)"
            >
              <ellipse
                cx="32"
                cy="33"
                fill="#f5f5f5"
                rx="32"
                ry="7"
              />
              <g
                fill-rule="nonzero"
                stroke="#d9d9d9"
              >
                <path
                  d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                />
                <path
                  d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                  fill="#fafafa"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="ant-empty-description"
        >
          No data
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommonCard Should render correctly if just basic props is present 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-1enej14 css-var-root"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <h2
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-1enej14 css-var-root"
            style="font-size: 16px; margin-bottom: 0px; display: flex; align-items: center; justify-content: space-between;"
          >
            <span>
              <i>
                Icon
              </i>
               
              Test
            </span>
          </h2>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card body
      </p>
    </div>
  </div>
</div>
`;
